# ts-diffusion

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs-publish.yaml  tests.yaml
changelog/: index.html
docs/: changelog.md  index.md
docs/references/: datamodules.md  index.md
docs/tutorials/: datasets.md  index.md
references/: index.html
references/datamodules/: index.html
search/: search_index.json
tests/integration/: conftest.py  test_data.py  test_model.py
tests/integration/data/: ecb_exchange_rate.csv
tests/integration/expected/: ecb_dataframe_dataset.pickle
tests/unit/: conftest.py  test_data.py
ts_diffusion/: data.py  model.py
tutorials/: index.html
tutorials/datasets/: index.html
