[tool.poetry]
name = "ts_diffusion"
version = "0.0.1"
description = "Diffusion model for time series forecasting"
authors = []
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
torch = "^1.13.1"
pytorch-lightning = "^1.8.6"
loguru = "^0.6.0"
click = "^8.1.3"
gluonts = "^0.11.7"
strenum = "^0.4.9"
cloudpathlib = "^0.12.1"
ts-bolt = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0.5"
mkdocstrings = {version = "^0.19.1", extras = ["python"]}
mkdocstrings-python = "^0.8.3"
mkdocs-autorefs = "^0.4.1"


[tool.poetry.group.lab.dependencies]
ipython = "^8.10.0"
debugpy = "1.6.4"
ipykernel = "6.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
